# talenta_flask

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  config_local.py  docker-compose.yml  entrypoint.sh  execute.py  location.py  main.py  pyproject.toml  railway.json  requirements.txt  scheduler.py  setup.sh  talenta_api.py
docs/: API_ENDPOINTS.md  ATTENDANCE_DETECTION_FIX.md  DEPLOYMENT.md  GUNICORN_MIGRATION.md  MIGRATION_SUMMARY.md  REFACTORING_SUMMARY.md
lib/: __init__.py
scripts/: entrypoint.sh  setup.sh
src/: __init__.py
src/api/: __init__.py  server.py  talenta.py
src/cli/: __init__.py  execute.py  scheduler.py
src/config/: config_local.py
src/core/: __init__.py  auth.py  location.py  logger.py  telegram.py
