[project]
name = "talenta-api"
version = "2.0.0"
description = "Automated clock in/out system for Mekari Talenta HR (Python implementation)"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "ISC" }
authors = [
    { name = "Talenta API Contributors" }
]
keywords = ["talenta", "attendance", "automation", "hr", "mekari"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]

dependencies = [
    "requests>=2.31.0",
    "schedule>=1.2.0",
    "python-dotenv>=1.0.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ans-4175/talenta-api"
Repository = "https://github.com/ans-4175/talenta-api"
Issues = "https://github.com/ans-4175/talenta-api/issues"

[project.scripts]
talenta-clockin = "execute:main"
talenta-clockout = "execute:main"
talenta-scheduler = "scheduler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# UV-specific configuration
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
